--- a/brevets/api/Dockerfile
+++ b/brevets/api/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.8
 LABEL maintainer="noemail@website.domain"
-COPY . /api
-WORKDIR /api
+COPY . /stuff
+WORKDIR /stuff
 RUN pip install -r requirements.txt
 CMD ["python", "api.py"]
