--- a/brevets/docker-compose.yml
+++ b/brevets/docker-compose.yml
@@ -1,11 +1,9 @@
 version: '3'
 
 services:
-    web:
+    brevetsapp:
         build: ./brevetsapp
         command: python -u flask_brevets.py 
-        volumes:
-            - ./brevetsapp:/stuff
         ports:
             - "5002:5000"
         depends_on:
@@ -15,8 +13,6 @@ services:
             
     restapi:
         build: ./api
-        volumes:
-            - ./api:/stuff
         ports:
             - 5001:5000
         depends_on:
@@ -24,11 +20,9 @@ services:
         environment:
             MONGODB_HOSTNAME: ourdb
             
-    apidisplay:
+    website:
         build: ./website
         command: python -u api_display.py 
-        volumes:
-            - ./website:/stuff
         ports:
             - "5000:5000"
         depends_on:
@@ -38,21 +32,6 @@ services:
             BACKEND_ADDR: restapi
             BACKEND_PORT: 5000
             MONGODB_HOSTNAME: ourdb
-            MONGODB_HOSTNAME: ourdb
-            
-    # website:
-        # image: php:apache
-        # volumes:
-            # - ./website:/var/www/html
-        # ports:
-            # - 5000:80
-        # depends_on:
-            # - restapi
-            # - ourdb
-        # environment:
-          # BACKEND_ADDR: restapi
-          # BACKEND_PORT: 5000
-          # MONGODB_HOSTNAME: ourdb
           
     ourdb:
         image: mongo:latest
