--- a/brevets/api/Dockerfile
+++ b/brevets/api/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:3.8
-LABEL maintainer="noemail@website.domain"
+LABEL maintainer="jcsdavis@gmail.com"
 COPY . /stuff
 WORKDIR /stuff
 RUN pip install -r requirements.txt
